fixing style on mobile view

--- a/components/BlogCard/styles.module.scss
+++ b/components/BlogCard/styles.module.scss
@@ -2,52 +2,58 @@
 @use "styles/breakpoint";
 
 .card {
-	background: colors.$white;
-	border-radius: 6px;
-	border: 0;
-	height: 100%;
+  background: colors.$white;
+  border-radius: 6px;
+  border: 0;
+  height: 100%;
 
-	img {
-		border-radius: 6px 6px 0 0;
-	}
+  img {
+    border-radius: 6px 6px 0 0;
+  }
 }
 
 .image {
-	position: relative;
-	height: 165px;
-	@media (max-width: breakpoint.$lg) {
-		height: 125px;
-	}
+  position: relative;
+  height: 165px;
+  @media (max-width: breakpoint.$lg) {
+    height: 125px;
+  }
 }
 
 .title {
-	max-height: 44px;
-	overflow: hidden;
-	@media (max-width: breakpoint.$lg) {
-		max-height: 72px;
-	}
+  max-height: 80px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  max-width: 100%;
+  line-height: 1.5;
+  display: -webkit-box;
+  display: -moz-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .text {
-	font-size: 16px;
-	margin-bottom: 12px;
-	height: 48px;
-	overflow: hidden;
-	color: colors.$secondary;
+  font-size: 16px;
+  margin-bottom: 12px;
+  height: 48px;
+  overflow: hidden;
+  color: colors.$secondary;
 }
 
 .date {
-	font-size: 16px;
-	color: colors.$text-3rd;
+  font-size: 16px;
+  color: colors.$text-3rd;
 }
 
 .link {
-	&:hover {
-		color: inherit;
-		text-decoration: none;
+  &:hover {
+    color: inherit;
+    text-decoration: none;
 
-		.title {
-			color: colors.$blue;
-		}
-	}
+    .title {
+      color: colors.$blue;
+    }
+  }
 }
